ConEmu 230723 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=221218
-location_arc=4856292,x8F799615,https://github.com/Maximus5/ConEmu/releases/download/v22.12.18/ConEmuPack.221218.7z
-location_exe=7965016,x52BCE6E1,https://github.com/Maximus5/ConEmu/releases/download/v22.12.18/ConEmuSetup.221218.exe
-md5_arc=ddf71affe2982130ee2aa4ca481fe39f
-md5_exe=ce6b87f779c262e8fe3924bad97b5695
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.221218.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.221218.exe?use_mirror=autoselect
+version=230723
+location_arc=14599376,x6883A27E,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
+location_exe=7965520,x4558FAB0,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuSetup.230723.exe
+md5_arc=803bbaec31d84bf7c11466f6ffc1acbc
+md5_exe=45fdaec7a0a95600b4898f77b795fbaa
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230723.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230723.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=221218
-location_arc=4856292,x8F799615,https://github.com/Maximus5/ConEmu/releases/download/v22.12.18/ConEmuPack.221218.7z
-location_exe=7965016,x52BCE6E1,https://github.com/Maximus5/ConEmu/releases/download/v22.12.18/ConEmuSetup.221218.exe
-md5_arc=ddf71affe2982130ee2aa4ca481fe39f
-md5_exe=ce6b87f779c262e8fe3924bad97b5695
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.221218.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.221218.exe?use_mirror=autoselect
+version=230723
+location_arc=14599376,x6883A27E,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
+location_exe=7965520,x4558FAB0,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuSetup.230723.exe
+md5_arc=803bbaec31d84bf7c11466f6ffc1acbc
+md5_exe=45fdaec7a0a95600b4898f77b795fbaa
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230723.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230723.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=221218
-location_arc=4856292,x8F799615,https://github.com/Maximus5/ConEmu/releases/download/v22.12.18/ConEmuPack.221218.7z
-location_exe=7965016,x52BCE6E1,https://github.com/Maximus5/ConEmu/releases/download/v22.12.18/ConEmuSetup.221218.exe
-md5_arc=ddf71affe2982130ee2aa4ca481fe39f
-md5_exe=ce6b87f779c262e8fe3924bad97b5695
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.221218.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.221218.exe?use_mirror=autoselect
+version=230723
+location_arc=14599376,x6883A27E,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
+location_exe=7965520,x4558FAB0,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuSetup.230723.exe
+md5_arc=803bbaec31d84bf7c11466f6ffc1acbc
+md5_exe=45fdaec7a0a95600b4898f77b795fbaa
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230723.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230723.exe?use_mirror=autoselect
