Update preview/alpha versions

--- a/version.ini
+++ b/version.ini
@@ -14,18 +14,18 @@ mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230723.exe
 
 [ConEmu_Preview_2]
 version=230723
-location_arc=14599376,x6883A27E,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
+location_arc=4856574,x817F5131,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
 location_exe=7965520,x4558FAB0,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuSetup.230723.exe
-md5_arc=803bbaec31d84bf7c11466f6ffc1acbc
+md5_arc=beaf3ac360a2f6b845a926fb67918fb1
 md5_exe=45fdaec7a0a95600b4898f77b795fbaa
 mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230723.7z?use_mirror=autoselect
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230723.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
 version=230723
-location_arc=14599376,x6883A27E,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
+location_arc=4856574,x817F5131,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
 location_exe=7965520,x4558FAB0,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuSetup.230723.exe
-md5_arc=803bbaec31d84bf7c11466f6ffc1acbc
+md5_arc=beaf3ac360a2f6b845a926fb67918fb1
 md5_exe=45fdaec7a0a95600b4898f77b795fbaa
 mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230723.7z?use_mirror=autoselect
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230723.exe?use_mirror=autoselect
