ConEmu 230724 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=230723
-location_arc=4856574,x817F5131,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
-location_exe=7965520,x4558FAB0,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuSetup.230723.exe
-md5_arc=beaf3ac360a2f6b845a926fb67918fb1
-md5_exe=45fdaec7a0a95600b4898f77b795fbaa
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230723.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230723.exe?use_mirror=autoselect
+version=230724
+location_arc=4857689,x8C5C7FA8,https://github.com/Maximus5/ConEmu/releases/download/v23.07.24/ConEmuPack.230724.7z
+location_exe=7965008,x8106092F,https://github.com/Maximus5/ConEmu/releases/download/v23.07.24/ConEmuSetup.230724.exe
+md5_arc=04bdf9da25bc5712bc35787e01f90298
+md5_exe=e25225375674b58afbe17827fa6e0352
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230724.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230724.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=230723
-location_arc=4856574,x817F5131,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
-location_exe=7965520,x4558FAB0,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuSetup.230723.exe
-md5_arc=beaf3ac360a2f6b845a926fb67918fb1
-md5_exe=45fdaec7a0a95600b4898f77b795fbaa
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230723.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230723.exe?use_mirror=autoselect
+version=230724
+location_arc=4857689,x8C5C7FA8,https://github.com/Maximus5/ConEmu/releases/download/v23.07.24/ConEmuPack.230724.7z
+location_exe=7965008,x8106092F,https://github.com/Maximus5/ConEmu/releases/download/v23.07.24/ConEmuSetup.230724.exe
+md5_arc=04bdf9da25bc5712bc35787e01f90298
+md5_exe=e25225375674b58afbe17827fa6e0352
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230724.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230724.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=230723
-location_arc=4856574,x817F5131,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuPack.230723.7z
-location_exe=7965520,x4558FAB0,https://github.com/Maximus5/ConEmu/releases/download/v23.07.23/ConEmuSetup.230723.exe
-md5_arc=beaf3ac360a2f6b845a926fb67918fb1
-md5_exe=45fdaec7a0a95600b4898f77b795fbaa
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230723.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230723.exe?use_mirror=autoselect
+version=230724
+location_arc=4857689,x8C5C7FA8,https://github.com/Maximus5/ConEmu/releases/download/v23.07.24/ConEmuPack.230724.7z
+location_exe=7965008,x8106092F,https://github.com/Maximus5/ConEmu/releases/download/v23.07.24/ConEmuSetup.230724.exe
+md5_arc=04bdf9da25bc5712bc35787e01f90298
+md5_exe=e25225375674b58afbe17827fa6e0352
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.230724.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.230724.exe?use_mirror=autoselect
